--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@ img {
   right: 400px;
   border: 0px white solid;
   border-radius: 8px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .purple {
